Proportional Size edit box and display/useage in viewport #53786

Closed
opened 2018-01-15 09:45:17 +01:00 by Reiner Prokein · 10 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

2.79(a), fresh from current Master

Short description of error
You can adjust the Proportional size in the Last operator. And the influence radius changes. But the proportional size radius in viewport still displays the old value, in both the header and the circle. And when you adjust the radius in the viewport, then the proportional size value in the Last operator snaps back to the value form the manipulation in the viewport instead of increasing from the value that you have typed in in the last operator Proportional Size edit box.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Make a cube, enter edit mode. Enable Proportional Editing. Pull out a vertice. You will see the radius for proportional editing be displayed. And you can change it now by the scroll wheel for example.

The Proportional Size edit box updates the value.

Now change the value in the Edit box, and not by scroll wheel. The proportional influence changes. But the radius that displays the influence area stays still the same. And when you click at the transform widget, then the header shows the old value. We have now two different values for the same radius. Which i would classify as a bug.

Ideally the value in the viewport should update when you change the value in the edit box in the last operator panel.

proportionalsizeproblem.jpg

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) 2.79(a), fresh from current Master **Short description of error** You can adjust the Proportional size in the Last operator. And the influence radius changes. But the proportional size radius in viewport still displays the old value, in both the header and the circle. And when you adjust the radius in the viewport, then the proportional size value in the Last operator snaps back to the value form the manipulation in the viewport instead of increasing from the value that you have typed in in the last operator Proportional Size edit box. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Make a cube, enter edit mode. Enable Proportional Editing. Pull out a vertice. You will see the radius for proportional editing be displayed. And you can change it now by the scroll wheel for example. The Proportional Size edit box updates the value. Now change the value in the Edit box, and not by scroll wheel. The proportional influence changes. But the radius that displays the influence area stays still the same. And when you click at the transform widget, then the header shows the old value. We have now two different values for the same radius. Which i would classify as a bug. Ideally the value in the viewport should update when you change the value in the edit box in the last operator panel. ![proportionalsizeproblem.jpg](https://archive.blender.org/developer/F1835752/proportionalsizeproblem.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles

Added subscriber: @zeauro

Added subscriber: @zeauro

I can not reproduce on linux. Master 75e2ae7 or official 2.79

Last operator panel displays last translation with enabled proportionnal editing only after a validation.
At that moment, there is no more setting available into header of 3DView.
I can redo a translation with enabled proportionnal editing to obtain something that looks like your screencapture.
But if it is the case, I can not edit last operator panel because it is refering to former translation.

If you have header of 3D View simplified to display operator values, last operator panel should be ignored and considered as previous operation and not current one.
It cannot be modified at same time.
If you have header of 3D View with all menus and buttons, last operator panel can be edited and its values modified.
You should not see a circle when tweaking proportionnal editing size into last operator panel. You should just see vertices moving.

So, I don't know if there is a really big bug under windows or if your are misunderstanding how last operator panel is intended to work.
Waiting a windows tester.

I can not reproduce on linux. Master 75e2ae7 or official 2.79 Last operator panel displays last translation with enabled proportionnal editing only after a validation. At that moment, there is no more setting available into header of 3DView. I can redo a translation with enabled proportionnal editing to obtain something that looks like your screencapture. But if it is the case, I can not edit last operator panel because it is refering to former translation. If you have header of 3D View simplified to display operator values, last operator panel should be ignored and considered as previous operation and not current one. It cannot be modified at same time. If you have header of 3D View with all menus and buttons, last operator panel can be edited and its values modified. You should not see a circle when tweaking proportionnal editing size into last operator panel. You should just see vertices moving. So, I don't know if there is a really big bug under windows or if your are misunderstanding how last operator panel is intended to work. Waiting a windows tester.
Author

Well, maybe it is really me understanding things wrong. But i have modified the size for proportional editing in two ways, and end in different results where it should end in the same result.

Let's say i have set the size to 2 with the scroll wheel. When i repeat the transformation, and adjust the size with the scroll wheel again, then it starts with the size from the former operation where i have already adjusted the size. 2. And scales bigger or smaller from this value.

Now let's say i set it with the scroll wheel to 2, and adjust the size to 5 in the last operator then. You will notice that the proportional editing changes to 5 under the hood. But now when i repeat the transformation, and adjust the size with the scroll wheel again, then it does not go on from 5, but from 2.

It is of course in both cases a fresh operation. And so we work with a fresh last operator panel in both cases. But as told with a different result.

Well, maybe it is really me understanding things wrong. But i have modified the size for proportional editing in two ways, and end in different results where it should end in the same result. Let's say i have set the size to 2 with the scroll wheel. When i repeat the transformation, and adjust the size with the scroll wheel again, then it starts with the size from the former operation where i have already adjusted the size. 2. And scales bigger or smaller from this value. Now let's say i set it with the scroll wheel to 2, and adjust the size to 5 in the last operator then. You will notice that the proportional editing changes to 5 under the hood. But now when i repeat the transformation, and adjust the size with the scroll wheel again, then it does not go on from 5, but from 2. It is of course in both cases a fresh operation. And so we work with a fresh last operator panel in both cases. But as told with a different result.

Thanks for this clarification.

Indeed, I can confim that change of proportional size through last operator panel is not kept at second call of the operator in master 45b5de9 or 2.79.
From a user perspective, the tool is often used with a succession of calls.
And the fact that value of the setting modified by mouse is kept proves that should behave the same when change is made by last operator region.

Thanks for this clarification. Indeed, I can confim that change of proportional size through last operator panel is not kept at second call of the operator in master 45b5de9 or 2.79. From a user perspective, the tool is often used with a succession of calls. And the fact that value of the setting modified by mouse is kept proves that should behave the same when change is made by last operator region.
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Campbell Barton was assigned by Philipp Oeser 2018-01-17 16:26:43 +01:00
Member

Reading blender/blender-addons#38367 (Operators no longer save / restore their last-used properties when invoked.) and related stackexchange or related commits it is still not clear to me if this is by design (or a bug)
There is a difference between the toolsetting and the last operator props (aka bpy.data.scenes['Scene'].tool_settings.proportional_size vs. bpy.data.window_managers['WinMan'].operators['TRANSFORM_OT_translate'].properties['proportional_size']).
Code in saveTransform() is explicitly only copying back to toolsettings in case of modal execution -- initTransform() will read back from toolsettings if modal.

I would kindly ask @ideasman42 to have a look here...

Reading blender/blender-addons#38367 (Operators no longer save / restore their last-used properties when invoked.) and related stackexchange or related commits it is still not clear to me if this is by design (or a bug) There is a difference between the toolsetting and the last operator props (aka `bpy.data.scenes['Scene'].tool_settings.proportional_size` vs. `bpy.data.window_managers['WinMan'].operators['TRANSFORM_OT_translate'].properties['proportional_size']`). Code in `saveTransform()` is explicitly only copying back to toolsettings in case of **modal** execution -- `initTransform()` will read back from toolsettings if **modal**. I would kindly ask @ideasman42 to have a look here...

Currently redo doesn't store values back to tool settings, since transform can run from Python we don't want to store the last used value in tool-settings in every instance, this patch allows operators to detect repeat execution: D3010

An alternate fix would be to always use the setting from the previous execution: P595
It's a much smaller change but has the down side that transform/rotate/scale etc - all have their own sizes.

Currently redo doesn't store values back to tool settings, since transform can run from Python we don't want to store the last used value in tool-settings in every instance, this patch allows operators to detect repeat execution: [D3010](https://archive.blender.org/developer/D3010) An alternate fix would be to always use the setting from the previous execution: [P595](https://archive.blender.org/developer/P595.txt) It's a much smaller change but has the down side that transform/rotate/scale etc - all have their own sizes.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 5a61c1de82

This issue was referenced by 5a61c1de8269c3398cc638f94141a30e3fbcf3cb
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53786
No description provided.